# zxul767.github.io

./: .gitignore  Makefile  README.md  pyproject.toml  thoughts.md
.github/workflows/: publish.yml
docs/: .buildinfo  Makefile  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_sources/glossary/: index.rst.txt
docs/_static/js/: external_links.js
docs/glossary/: index.html
docs/intelligence/: index.html
docs/public/: index.html
docs/source/: conf.py  index.rst  requirements.txt
docs/source/glossary/: index.rst
docs/source/intelligence/: index.rst
docs/source/the-society-of-mind/: index.rst
docs/source/understanding/: index.rst
docs/the-society-of-mind/: index.html
docs/understanding/: index.html
