[tool.poetry]
name = "on-thinking"
version = "0.1.0"
description = "On Thinking Book"
authors = ["zxul767 <willebaldo.gomez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.dev-dependencies]
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
